methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:2: error: not found: value faireMotif
  faireMotif()
  ^PatternPicture:3: error: not found: value change
  change()
  ^PatternPicture:4: error: not found: value faireMotif
  faireMotif()
  ^PatternPicture:8: error: not found: value faireMotif
faireMotif(){
^PatternPicture:10: error: not found: value Ligne
    Ligne(Color.RED, Color.BLUE)
    ^PatternPicture:11: error: not found: value Ligne
    Ligne(Color.BLUE, Color.GREEN)
    ^PatternPicture:12: error: not found: value Ligne
    Ligne(Color.GREEN, Color.YELLOW)
    ^PatternPicture:13: error: not found: value Ligne
    Ligne(Color.YELLOW, Color.RED)
    ^PatternPicture:26: error: not found: value Ligne
Ligne(a:Color, b:Color){
^PatternPicture:26: error: not found: value a
Ligne(a:Color, b:Color){
      ^PatternPicture:26: error: not found: value b
Ligne(a:Color, b:Color){
               ^PatternPicture:27: error: not found: value marque
  marque(a)
  ^PatternPicture:27: error: not found: value a
  marque(a)
         ^PatternPicture:28: error: not found: value marque
  marque(b)
  ^PatternPicture:28: error: not found: value b
  marque(b)
         ^PatternPicture:33: error: not found: value marque
marque(c:Color){
^PatternPicture:33: error: not found: value c
marque(c:Color){
       ^PatternPicture:34: error: not found: value c
  setCouleurBrosse(c)
                   ^PatternPicture:40: error: not found: value change
change(){
^