methods.picture.PatternPicture.scala.code
override def run() {
  faireMotif()
  change()
  faireMotif()
}


faireMotif(){
  for(i<- 1 to 2){
    Ligne(Color.RED, Color.BLUE)
    Ligne(Color.BLUE, Color.GREEN)
    Ligne(Color.GREEN, Color.YELLOW)
    Ligne(Color.YELLOW, Color.RED)
		for (j<- 1 to 4){
      avance()
    }
   }  
  }
  
  





Ligne(a:Color, b:Color){
  marque(a)
  marque(b)
  avance()
  gauche()
}

marque(c:Color){
  setCouleurBrosse(c)
  avance()
  baisseBrosse()
  leveBrosse()
}

change(){
  gauche()
  for(i<- 1 to 5){
    avance()
  }
  droite()
  
}